--- a/users.html
+++ b/users.html
@@ -241,7 +241,7 @@
                 <div class="user-info">
                     <h3 class="user-name">boringstudents</h3>
                     <div class="user-launcher">
-                        <i class="fas fa-rocket"></i> CHMLFRP-UI-Launcher (CUL)
+                        <i class="fas fa-rocket"></i> CHMLFRP-UI-Launcher (CUL,CSL)
                     </div>
                     <div class="skills">
                         <span class="skill-tag">Python</span>
@@ -249,7 +249,7 @@
                         <span class="skill-tag">GUI</span>
                     </div>
                     <p class="user-bio">
-                        CUL 启动器的开发者，专注于使用 Python 和 PyQt6 创建跨平台的图形界面应用。CUL 以其简洁的界面和便捷的操作流程，为用户提供了另一种选择。
+                        CUL和CSL 启动器的开发者，专注于使用 Python 和 PyQt6 创建Windows图形化启动器和简易的shell启动器。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/boringstudents" target="_blank" class="social-link github-link">
