--- a/users.html
+++ b/users.html
@@ -241,7 +241,7 @@
                 <div class="user-info">
                     <h3 class="user-name">boringstudents</h3>
                     <div class="user-launcher">
-                        <i class="fas fa-rocket"></i> CHMLFRP-UI-Launcher (CUL,CSL)
+                        <i class="fas fa-rocket"></i> CHMLFRP-UI-Launcher ChmlFrp-shell-Launcher
                     </div>
                     <div class="skills">
                         <span class="skill-tag">Python</span>
