--- a/users.html
+++ b/users.html
@@ -258,6 +258,30 @@
                     </div>
                 </div>
             </div>
+
+            <div class="user-card">
+                <div class="user-banner" style="background: linear-gradient(135deg, #1abc9c, #16a085);"></div>
+                <img src="https://avatars.githubusercontent.com/u/82070050?v=4" alt="纯爱战神" class="user-avatar">
+                <div class="user-info">
+                    <h3 class="user-name">纯爱战神</h3>
+                    <div class="user-launcher">
+                        <i class="fas fa-rocket"></i> FrpcUI
+                    </div>
+                    <div class="skills">
+                        <span class="skill-tag">C#</span>
+                        <span class="skill-tag">.NET</span>
+                        <span class="skill-tag">WinForms</span>
+                    </div>
+                    <p class="user-bio">
+                        FrpcUI 启动器的开发者，专注于使用 C# 和 .NET 框架创建功能强大且用户友好的 Windows 窗体应用程序，为 ChmlFrp 用户提供便捷的管理工具。
+                    </p>
+                    <div class="social-links">
+                        <a href="https://github.com/huqikuangmo" target="_blank" class="social-link github-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="join-community">
