--- a/launchers.html
+++ b/launchers.html
@@ -371,11 +371,11 @@
                     </div>
                     
                     <div class="launcher-links">
-                        <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher" target="_blank" class="launcher-btn github-btn">
+                        <a href="https://github.com/ChmlFrp/ChmlFrp_Professional_Launcher/" target="_blank" class="launcher-btn github-btn">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="#" id="cpl-download-btn" class="launcher-btn download-btn">
-                            <i class="fas fa-download"></i> 加速下载
+                        <a href="https://www.ilanzou.com/s/t3L0w48c" target="_blank" class="launcher-btn download-btn">
+                            <i class="fas fa-download"></i> 蓝奏云下载
                         </a>
                     </div>
                 </div>
