--- a/users.html
+++ b/users.html
@@ -191,7 +191,7 @@
                 <div class="user-banner" style="background: linear-gradient(135deg, #3498db, #2ecc71);"></div>
                 <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz" class="user-avatar">
                 <div class="user-info">
-                    <h3 class="user-name">Qianyiaz</h3>
+                    <h3 class="user-name">千依DIAZ</h3>
                     <div class="user-launcher">
                         <i class="fas fa-rocket"></i> ChmlFrp_Professional_Launcher (CPL)
                     </div>
@@ -215,7 +215,7 @@
                 <div class="user-banner" style="background: linear-gradient(135deg, #9b59b6, #3498db);"></div>
                 <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiangQaQ" class="user-avatar">
                 <div class="user-info">
-                    <h3 class="user-name">FengXiangQaQ</h3>
+                    <h3 class="user-name">枫相QAQ</h3>
                     <div class="user-launcher">
                         <i class="fas fa-rocket"></i> Xingcheng-Chmlfrp-Lanucher (XCL)
                     </div>
@@ -239,7 +239,7 @@
                 <div class="user-banner" style="background: linear-gradient(135deg, #e74c3c, #f39c12);"></div>
                 <img src="https://avatars.githubusercontent.com/u/183853199?v=4" alt="boringstudents" class="user-avatar">
                 <div class="user-info">
-                    <h3 class="user-name">boringstudents</h3>
+                    <h3 class="user-name">无聊的初中牲</h3>
                     <div class="user-launcher">
                         <i class="fas fa-rocket"></i> CHMLFRP-UI-Launcher ChmlFrp-shell-Launcher
                     </div>
@@ -270,7 +270,7 @@
                     <div class="skills">
                         <span class="skill-tag">C#</span>
                         <span class="skill-tag">.NET</span>
-                        <span class="skill-tag">WinForms</span>
+                        <span class="skill-tag">WPF</span>
                     </div>
                     <p class="user-bio">
                         FrpcUI 启动器的开发者，专注于使用 C# 和 .NET 框架创建功能强大且用户友好的 Windows 窗体应用程序，为 ChmlFrp 用户提供便捷的管理工具。
