添加 唐鹏程

--- a/users.html
+++ b/users.html
@@ -282,6 +282,30 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="user-card">
+                <div class="user-banner" style="background: linear-gradient(135deg, #3498db, #9b59b6);"></div>
+                <img src="http://q.qlogo.cn/headimg_dl?dst_uin=407906638&spec=640&img_type=jpg" alt="唐鹏程" class="user-avatar">
+                <div class="user-info">
+                    <h3 class="user-name">唐鹏程</h3>
+                    <div class="user-launcher">
+                        <i class="fas fa-rocket"></i> 内网穿透辅助工具
+                    </div>
+                    <div class="skills">
+                        <span class="skill-tag">C#</span>
+                        <span class="skill-tag">.NET Framework 4.7.2</span>
+                        <span class="skill-tag">winform</span>
+                    </div>
+                    <p class="user-bio">
+                        内网穿透辅助工具的开发者，专注于为ChmlFrp用户提供便捷实用的内网穿透解决方案，使用C#和.NET Framework 4.7.2开发。
+                    </p>
+                    <div class="social-links">
+                        <a href="https://github.com/tpc1990519" target="_blank" class="social-link github-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="join-community">
