--- a/launchers.html
+++ b/launchers.html
@@ -250,7 +250,7 @@
         
         <div class="launcher-grid">
             <!-- 内网穿透辅助工具 卡片 -->
-            <div class="launcher-card" id="intranet-penetration-tool" data-category="wpf" data-md-url="https://raw.githubusercontent.com/ChmlFrp/README.md">
+            <div class="launcher-card" id="intranet-penetration-tool" data-category="wpf" data-md-url="https://raw.githubusercontent.com/ChmlFrp/AutoServices/README.md">
                 <div class="launcher-banner"></div>
                 <img src="https://raw.githubusercontent.com/ChmlFrp/_chmlfrp.com_/refs/heads/main/%E5%86%85%E7%BD%91%E7%A9%BF%E9%80%8F%E8%BE%85%E5%8A%A9%E5%B7%A5%E5%85%B7.png" alt="内网穿透辅助工具" class="launcher-logo">
                 <div class="launcher-content">
@@ -271,10 +271,10 @@
                     </div>
                     
                     <div class="launcher-links">
-                        <a href="https://github.com/ChmlFrp" target="_blank" class="launcher-btn github-btn">
+                        <a href="https://github.com/ChmlFrp/AutoServices" target="_blank" class="launcher-btn github-btn">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="https://github.com/ChmlFrp/releases/latest" class="launcher-btn download-btn">
+                        <a href="https://github.com/ChmlFrp/AutoServices/releases/latest" class="launcher-btn download-btn">
                             <i class="fas fa-download"></i> 下载
                         </a>
                     </div>
