--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
         <div class="footer-content">
             <p>© 2025 <a href="https://github.com/ChmlFrp" target="_blank"><i class="fab fa-github"></i> Github.com/ChmlFrp</a></p>
             <div class="footer-nav">
-                <a href="index.html">首页</a> | 
-                <a href="launchers.html">启动器</a> | 
-                <a href="users.html">作者</a>
+                <a href="index">首页</a> | 
+                <a href="launchers">启动器</a> | 
+                <a href="users">作者</a>
             </div>
         </div>
     </footer>
