--- a/users.html
+++ b/users.html
@@ -193,7 +193,7 @@
                 <div class="user-info">
                     <h3 class="user-name">千依DIAZ</h3>
                     <div class="user-launcher">
-                        <i class="fas fa-rocket"></i> ChmlFrp_Professional_Launcher (CPL)
+                        <i class="fas fa-rocket"></i> ChmlFrp_Professional_Launcher (CAT)
                     </div>
                     <div class="skills">
                         <span class="skill-tag">C#</span>
@@ -201,7 +201,7 @@
                         <span class="skill-tag">.NET</span>
                     </div>
                     <p class="user-bio">
-                        CPL 启动器的主要开发者，专注于打造功能完善、界面美观的专业化工具。CPL 是一款基于 WPF 框架的 Windows 客户端，为用户提供了强大的管理功能。
+                        CAT 启动器的主要开发者，专注于打造功能完善、界面美观的专业化工具。CAT 是一款基于 WPF 框架的 Windows 客户端，为用户提供了强大的管理功能。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/Qianyiaz" target="_blank" class="social-link github-link">
