--- a/launchers.html
+++ b/launchers.html
@@ -244,7 +244,7 @@
         
         <div class="launcher-filters">
             <button class="filter-btn active" data-filter="all">全部</button>
-            <button class="filter-btn" data-filter="wpf">.NET/WPF</button>
+            <button class="filter-btn" data-filter="wpf">C#</button>
             <button class="filter-btn" data-filter="python">Python</button>
         </div>
         
