--- a/api.html
+++ b/api.html
@@ -576,7 +576,7 @@
         </div>
         
         <div class="footer">
-            <p>© 2025 ChmlFrp API 监控系统 | <a href="index.html" style="color: var(--primary-color);">返回首页</a></p>
+            <p>© 2025 ChmlFrp API 监控系统 | <a href="index" style="color: var(--primary-color);">返回首页</a></p>
         </div>
     </div>
 
