--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index"><i class="fas fa-home"></i> 首页</a></li>
-            <li><a href="launchers"><i class="fas fa-list"></i> 启动器列表</a></li>
-            <li><a href="users"><i class="fas fa-users"></i> 作者</a></li>
-            <li><a href="api" target="_blank"><i class="fas fa-chart-line"></i> API状态</a></li>
-            <li><a href="blacklist" target="_blank"><i class="fas fa-ban"></i> 联盟黑名单</a></li>
-            <li><a href="blacklist-l" target="_blank"><i class="fas fa-user-slash"></i> 启动器黑名单</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> 首页</a></li>
+            <li><a href="launchers.html"><i class="fas fa-list"></i> 启动器列表</a></li>
+            <li><a href="users.html"><i class="fas fa-users"></i> 作者</a></li>
+            <li><a href="api.html" target="_blank"><i class="fas fa-chart-line"></i> API状态</a></li>
+            <li><a href="blacklist.html" target="_blank"><i class="fas fa-ban"></i> 联盟黑名单</a></li>
+            <li><a href="blacklist-l.html" target="_blank"><i class="fas fa-user-slash"></i> 启动器黑名单</a></li>
         </ul>
     </nav>
     <main>
@@ -109,16 +109,7 @@
         </section>
         
     </main>
-    <footer>
-        <div class="footer-content">
-            <p>© 2025 <a href="https://github.com/ChmlFrp" target="_blank"><i class="fab fa-github"></i> Github.com/ChmlFrp</a></p>
-            <div class="footer-nav">
-                <a href="index">首页</a> | 
-                <a href="launchers">启动器</a> | 
-                <a href="users">作者</a>
-            </div>
-        </div>
-    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
