--- a/index.html
+++ b/index.html
@@ -101,8 +101,16 @@
             <ul>
                 <li>
                     <a href="https://www.chmlfrp.cn" target="_blank">
-                        <img src="https://chmlfrp.cn/favicon.ico" alt="chmlfrp内网穿透" width="32" height="32">
-                        <span>chmlfrp内网穿透</span>
+                        <img src="https://chmlfrp.cn/favicon.ico" alt="ChmlFrp内网穿透" width="32" height="32">
+                        <span>ChmlFrp内网穿透</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://nginx.ltzy.top/" target="_blank">
+                        <img src="Nginx.png" alt="Nginx教程网" width="32" height="32">
+                        <span>Nginx教程网</span>
                     </a>
                 </li>
             </ul>
