--- a/users.html
+++ b/users.html
@@ -189,7 +189,7 @@
                 <div class="user-banner" style="background: linear-gradient(135deg, #3498db, #2ecc71);"></div>
                 <img src="https://avatars.githubusercontent.com/u/175490100?v=4" alt="Qianyiaz" class="user-avatar">
                 <div class="user-info">
-                    <h3 class="user-name">千依DIAZ</h3>
+                    <h3 class="user-name">千依</h3>
                     <div class="user-launcher">
                         <i class="fas fa-rocket"></i> ChmlFrp_Advanced_Toolkit (CAT)
                     </div>
@@ -199,7 +199,7 @@
                         <span class="skill-tag">.NET</span>
                     </div>
                     <p class="user-bio">
-                        CAT 启动器的主要开发者，专注于打造功能完善、界面美观的专业化工具。CAT 是一款基于 WPF 框架的 Windows 客户端，为用户提供了强大的管理功能。
+                        CAT 启动器的开发者，专注于打造功能完善、操作简单、新手友好、界面美观的专业化管理工具。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/Qianyiaz" target="_blank" class="social-link github-link">
@@ -213,7 +213,7 @@
                 <div class="user-banner" style="background: linear-gradient(135deg, #9b59b6, #3498db);"></div>
                 <img src="https://avatars.githubusercontent.com/u/140891522?v=4" alt="FengXiangQaQ" class="user-avatar">
                 <div class="user-info">
-                    <h3 class="user-name">枫相QAQ</h3>
+                    <h3 class="user-name">枫相</h3>
                     <div class="user-launcher">
                         <i class="fas fa-rocket"></i> Xingcheng-Chmlfrp-Lanucher (XCL)
                     </div>
@@ -223,7 +223,7 @@
                         <span class="skill-tag">Win32api</span>
                     </div>
                     <p class="user-bio">
-                        XCL 启动器的创建者，致力于开发轻量级且易于使用的启动器解决方案。XCL 采用简洁的设计理念，为用户提供流畅的操作体验和必要的核心功能。
+                        XCL 系列启动器的创建者，致力于开发轻量级且易于使用的启动器，为用户提供流畅的操作体验和必要的核心功能。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/FengXiangQaQ" target="_blank" class="social-link github-link">
@@ -247,7 +247,7 @@
                         <span class="skill-tag">GUI</span>
                     </div>
                     <p class="user-bio">
-                        CUL和CSL 启动器的开发者，专注于使用 Python 和 PyQt6 创建Windows图形化启动器和简易的shell启动器。
+                        CUL和CSL 启动器的开发者，致力于开发功能完善且易于使用的启动器，主要使用 Python 创建开发Windows图形化启动器和简易的shell启动器。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/boringstudents" target="_blank" class="social-link github-link">
@@ -271,7 +271,7 @@
                         <span class="skill-tag">WPF</span>
                     </div>
                     <p class="user-bio">
-                        FrpcUI 启动器的开发者，专注于使用 C# 和 .NET 框架创建功能强大且用户友好的 Windows 窗体应用程序，为 ChmlFrp 用户提供便捷的管理工具。
+                        FrpcUI 启动器的开发者，专注于使用 C# 和 WPF 框架创建功能强大且用户友好的图形化启动器，为 ChmlFrp 用户提供简单的管理工具。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/huqikuangmo" target="_blank" class="social-link github-link">
@@ -291,11 +291,11 @@
                     </div>
                     <div class="skills">
                         <span class="skill-tag">C#</span>
-                        <span class="skill-tag">.NET Framework 4.7.2</span>
+                        <span class="skill-tag">.NET</span>
                         <span class="skill-tag">winform</span>
                     </div>
                     <p class="user-bio">
-                        内网穿透辅助工具的开发者，专注于为ChmlFrp用户提供便捷实用的内网穿透解决方案，使用C#和.NET Framework 4.7.2开发。
+                        内网穿透辅助工具的开发者，专注于为ChmlFrp用户提供便捷实用的内网穿透解决方案，使用C#和winform开发。
                     </p>
                     <div class="social-links">
                         <a href="https://github.com/tpc1990519" target="_blank" class="social-link github-link">
