--- a/launchers.html
+++ b/launchers.html
@@ -285,7 +285,7 @@
                             <div class="launcher-banner"></div>
                             <img src="https://raw.githubusercontent.com/boringstudents/CHMLFRP-UI-Launcher/refs/heads/master/%E5%8E%9F%E5%A7%8B%E5%9B%BE%E5%83%8F/%E6%9C%89%E5%BA%95/favicon512.png" alt="cul" class="launcher-logo">
                             <div class="launcher-content">
-                                <h3 class="launcher-name">CHMLFRP-UI-Launcher</h3>
+                                <h3 class="launcher-name">CHMLFRP UI Launcher 2</h3>
                                 <p class="launcher-desc">ChmlFrp 第三方 Windows 图形化客户端，使用 PyQt6 + Python 开发。高自由度和高扩展操作。</p>
                                 
                                 <div class="tech-tags">
