--- a/launchers.html
+++ b/launchers.html
@@ -613,5 +613,8 @@
             });
         });
     </script>
+    <footer style="width:100%;text-align:center;padding:16px 0;background:rgba(255,255,255,0.85);font-size:15px;color:#888;box-shadow:0 -2px 8px rgba(0,0,0,0.03);position:relative;z-index:10;">
+  备案号 <a href="https://beian.miit.gov.cn/" target="_blank" style="color:#3498db;text-decoration:none;">闽ICP备2025107306号-1</a>
+</footer>
 </body>
 </html>
