--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChmlFrp 第三方启动器</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://chmlfrp.cn/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1><i class="fas fa-rocket"></i> ChmlFrp 第三方启动器</h1>
-    </header>
+
     <nav>
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i> 首页</a></li>
@@ -51,9 +49,9 @@
             <h3><i class="fas fa-link"></i> 相关链接</h3>
             <ul>
                 <li>
-                    <a href="https://preview.panel.chmlfrp.cn/" target="_blank">
-                        <i class="fas fa-tachometer-alt"></i> ChmlFrp-v3控制面板链接
-                    </a>
+                    <a href="https://panel.chmlfrp.cn/" target="_blank">
+                            <i class="fas fa-tachometer-alt"></i> ChmlFrp-v3控制面板链接
+                        </a>
                 </li>
                 <li>
                     <a href="https://github.com/orgs/TechCat-Team" target="_blank">
@@ -62,23 +60,18 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://docs.apiv1.chmlfrp.com" target="_blank">
-                        <i class="fas fa-book"></i> 群友的API文档
-                        <span class="link-desc">社区维护的API参考文档</span>
-                    </a>
+                    <a href="http://api.chmlfrp.con" target="_blank">
+                            <i class="fas fa-book"></i> 群友的API文档
+                            <span class="link-desc">社区维护的API参考文档</span>
+                        </a>
                 </li>
                 <li>
-                    <a href="https://docs.apiv2.chmlfrp.com" target="_blank">
+                    <a href="https://docs.chmlfrp.com" target="_blank">
                         <i class="fas fa-file-code"></i> 官方API v2文档
-                        <span class="link-desc">最新官方API文档</span>
+                        <span class="link-desc">第三方镜像官方API文档</span>
                     </a>
                 </li>
-                <li>
-                    <a href="https://list.chmlfrp.com" target="_blank">
-                        <i class="fas fa-list-alt"></i> chmlfrp.com解析指向
-                        <span class="link-desc">域名解析信息</span>
-                    </a>
-                </li>
+
                 <li>
                     <a href="http://bug.chmlfrp.com" target="_blank">
                         <i class="fas fa-bug"></i> chmlfrp官方bug链接
@@ -86,10 +79,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://cf.milkymay.top/" target="_blank">
-                        <i class="fas fa-clone"></i> ChmlFrp镜像站
-                        <span class="link-desc">备用访问站点</span>
-                    </a>
+                    <a href="javascript:void(0);" onclick="window.open(['https://panel--cf.milkymay.top', 'https://panel-cf.milkymay.top'][Math.floor(Math.random() * 2)]);">
+                            <i class="fas fa-clone"></i> ChmlFrp镜像站
+                            <span class="link-desc">备用访问站点</span>
+                        </a>
                 </li>
             </ul>
         </section>
@@ -109,6 +102,12 @@
                     <a href="https://www.chmlfrp.cn" target="_blank">
                         <img src="https://chmlfrp.cn/favicon.ico" alt="ChmlFrp内网穿透" width="32" height="32">
                         <span>ChmlFrp内网穿透</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.aetstudio.xyz" target="_blank">
+                        <img src="https://www.aetstudio.xyz/favicon.ico" alt="AetherStudio以太灵科" width="32" height="32">
+                        <span>AetherStudio以太灵科</span>
                     </a>
                 </li>
             </ul>
